[gd_scene load_steps=3 format=3 uid="uid://beoh388aty6d6"]

[ext_resource type="PackedScene" uid="uid://dl1fvfwne7oyn" path="res://scenes/chess_board.tscn" id="1_50bhw"]
[ext_resource type="Script" path="res://scripts/network_main.gd" id="1_ywh7d"]

[node name="NetworkMain" type="Node2D"]
script = ExtResource("1_ywh7d")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.25098, 0.341176, 0.356863, 1)
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -43.0
offset_right = 98.0
offset_bottom = -7.0
grow_vertical = 0
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 16.0

[node name="NetworkLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 16.0

[node name="ChessBoard" parent="." instance=ExtResource("1_50bhw")]
z_index = 5
scale = Vector2(0.5, 0.5)
